--- a/client/src/components/ComicPanel.css
+++ b/client/src/components/ComicPanel.css
@@ -22,14 +22,17 @@
 .comic-panel-image-container {
   position: relative;
   width: 100%;
-  height: 100%;
   min-height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .comic-panel-image {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
+  max-height: 600px;
+  object-fit: contain;
   display: block;
 }
 
